--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
       })(window,document,'script','dataLayer','GTM-57M823B');</script>
       <!-- End Google Tag Manager -->
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="WEBエンジニアとしてのポートフォリオ､またWEB制作やWEB開発に関わる知識を発信しています"
     />
-    <title>junsan14</title>
+    <title>junsan14｜WEBエンジニア</title>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
